Add failure job

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,3 +21,12 @@ jobs:
 
       - name: Run Main
         run: ./main.sh
+
+      - name: Notify Slack Fail
+        if: failure()
+        uses: slackapi/slack-github-action@v1.21.0
+        with:
+          channel-id: "C040YKC5E4U"
+          slack-message: "GitHub build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
