--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,9 @@ jobs:
         uses: slackapi/slack-github-action@v1.21.0
         with:
           channel-id: "C040YKC5E4U"
-          slack-message: "GitHub build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
+          slack-message: |
+            GitHub build result: ${{ job.status }}
+            ${{ github.event.pull_request.html_url || github.event.head_commit.url }}
+            <@${{ secrets.SLACK_UUID }}>
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
