--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
         run: ./main.sh
 
       - name: Notify Slack Fail
-        if: (( failure() && github.head_ref == 'main' ))
+        if: failure()
         uses: slackapi/slack-github-action@v1.21.0
         with:
           channel-id: "C040YKC5E4U"
